# characteristics_view

./: .gitignore  CMakeLists.txt  README.MD  characteristics_view.pro  controllerdialog.cpp  controllerdialog.h  controllerdialog.ui  detailitem.cpp  detailitem.h  detailmode.cpp  detailmode.h  detailmodel.cpp  detailmodel.h  detailsortfiltermodel.cpp  detailsortfiltermodel.h  enums.cpp  enums.h  fillmode.cpp  fillmode.h  fillmodebuilder.cpp  fillmodebuilder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  media.qrc  mode.cpp  mode.h  modenum.cpp  modenum.h  paramdialog.cpp  paramdialog.h  paramdialog.ui  part.hpp  partitem.cpp  partitem.h  partmodel.cpp  partmodel.h  structitem.cpp  (+7 more)
helpers/: abstracthelper.cpp  abstracthelper.h  anglehelper.cpp  anglehelper.h  centerhelper.cpp  centerhelper.h  densityhelper.cpp  densityhelper.h  masshelper.cpp  masshelper.h  materialhelper.cpp  materialhelper.h  methodhelper.cpp  methodhelper.h  stylehelper.cpp  stylehelper.h
